        defined for a specific function, corrected. Now, if nothing is defined the first  object
        in the slot \code{data} is returned (#223),
        \item the method was enhanced to deal with objects of type \code{list} containing only
        \code{RLum} objects. Depending on the \code{RLum} objects in the list the corresponding \code{get_RLum} methods
        are called.

      }

     \item \code{Risoe.BINfileData-class}
      \itemize{
        \item Show method now returns the valid grain range.
      }

   }
  }

  \subsection{New functions}{
   \itemize{
      \item \code{calc_gSGC()} Calculate De value based on the gSGC by Li et al., 2015
      \item \code{plot_NRt()} Creates a Natural/Regenerated signal vs. time (NR(t)) plot as shown in Steffen et al. 2009
       \item \code{read_Daybreak2R()} Imports ASCII data produced by a Daybreak TL/OSL reader
       \item \code{use_DRAC()} Provides an R interface to the 'Dose Rate Calculator' (DRAC)
       \item \code{template_DRAC()} Creates a DRAC input template (v1.1) to be used for \code{use_DRAC()}
   }
  }

  \subsection{Bugfixes and changes}{
   \itemize{
      \item \code{analyse_SAR.CWOSL()}
      \itemize{

        \item Internal curve selection now works using the \code{get_RLum}. This should give
        a little bit more flexibility and prevent errors with odd curve names,
        \item in the rare case where no recuperation rate can be calculated due to the missing
        R0 point the function stopped with an error. This has been corrected.
        \item function now how to deal with a \code{list} of \code{RLum.Analysis} objects and will
        re-call itself as elements are in the \code{list} (argument \code{object}). In particular
        cases this may lead to a tremendous efficient data analysis process,
        \item add 'call' to data output object,
        \item add 'UID' column to data object 'De.values' and 'rejection.criteria',