@@ -103,7 +103,7 @@
 </td>
 <td class=cellinside>2015-08-31
 </td>
-<td class=cellinside>01:43:16
+<td class=cellinside>09:06:41
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -461,9 +461,9 @@
 </td>
 <td class=cellinside>0.3.0
 </td>
-<td class=cellinside>2015-08-30
+<td class=cellinside>2015-08-31
 </td>
-<td class=cellinside>16:29:29
+<td class=cellinside>09:06:41
 
 </td>
 <td class=cellinside><br /> Margret C. Fuchs, HZDR, Helmholtz-Institute Freiberg for Resource Technology (Germany),<br />  Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -965,9 +965,9 @@
 </td>
 <td class=cellinside>0.1.2
 </td>
-<td class=cellinside>2015-08-30
+<td class=cellinside>2015-08-31
 </td>
-<td class=cellinside>19:11:03
+<td class=cellinside>23:16:21
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1022,9 +1022,9 @@
 </td>
 <td class=cellinside>0.1.8
 </td>
-<td class=cellinside>2015-08-30
+<td class=cellinside>2015-08-31
 </td>
-<td class=cellinside>23:39:57
+<td class=cellinside>09:06:41
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1230,9 +1230,9 @@
 </td>
 <td class=cellinside>0.4.1
 </td>
-<td class=cellinside>2015-08-30
+<td class=cellinside>2015-08-31
 </td>
-<td class=cellinside>15:14:19
+<td class=cellinside>09:06:41
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1249,9 +1249,9 @@
 </td>
 <td class=cellinside>0.2.0
 </td>
-<td class=cellinside>2015-08-30
+<td class=cellinside>2015-08-31
 </td>
-<td class=cellinside>16:13:50
+<td class=cellinside>09:06:41
 
 </td>
 <td class=cellinside><br /> Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,<br /> Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
