@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Mon Aug 31 01:46:52 2015
+% Mon Aug 31 23:21:22 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -10,7 +10,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.1.4 & 2015-08-29 & 13:33:00
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.6.3 & 2015-08-31 & 01:43:16
+  3 & analyse\_SAR.CWOSL & Analyse SAR CW-OSL measurements & $<$br /$>$ The function performs a SAR CW-OSL analysis on an$<$br /$>$ RLum.Analysis  object including growth curve fitting.$<$br /$>$ & 0.6.3 & 2015-08-31 & 09:06:41
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   4 & Analyse\_SAR.OSLdata & Analyse SAR CW-OSL measurements. & $<$br /$>$ The function analyses SAR CW-OSL curve data and provides a summary of the$<$br /$>$ measured data for every position. The output of the function is optimised$<$br /$>$ for SAR OSL measurements on quartz.$<$br /$>$ & 0.2.16 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg$<$br /$>$ (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -47,7 +47,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010   The bootstrap approach is$<$br /$>$ based on a rewritten MATLAB script of Alastair Cunningham.   Alastair$<$br /$>$ Cunningham is thanked for his help in implementing and cross-checking the$<$br /$>$ code.$<$br /$>$  R Luminescence Package Team \\ 
   21 & calc\_OSLLxTxRatio & Calculate Lx/Tx ratio for CW-OSL curves & $<$br /$>$ Calculate Lx/Tx ratios from a given set of CW-OSL curves.$<$br /$>$ & 0.5.1 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  22 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.3.0 & 2015-08-30 & 16:29:29
+  22 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.3.0 & 2015-08-31 & 09:06:41
  & $<$br /$>$ Margret C. Fuchs, HZDR, Helmholtz-Institute Freiberg for Resource Technology (Germany),$<$br /$>$  Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   23 & calc\_Statistics & Function to calculate statistic measures & $<$br /$>$ This function calculates a number of descriptive statistics for De-data,$<$br /$>$ most fundamentally using error-weighted approaches.$<$br /$>$ & 0.1.3 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -92,13 +92,13 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   48 & merge\_RLum.Data.Curve & Merge function for RLum.Data.Curve S4 class objects & $<$br /$>$ Function allows merging of RLum.Data.Curve objects in different ways$<$br /$>$ & 0.1.1 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  49 & merge\_RLum & General merge function for RLum S4 class objects & $<$br /$>$ Function calls object-specific merge functions for RLum S4 class objects.$<$br /$>$ & 0.1.2 & 2015-08-30 & 19:11:03
+  49 & merge\_RLum & General merge function for RLum S4 class objects & $<$br /$>$ Function calls object-specific merge functions for RLum S4 class objects.$<$br /$>$ & 0.1.2 & 2015-08-31 & 23:16:21
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   50 & merge\_RLum.Results & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.1
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   51 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.2 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
-  52 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-08-30 & 23:39:57
+  52 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-08-31 & 09:06:41
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   53 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.7.2 & 2015-08-21 & 18:08:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -119,9 +119,9 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   62 & plot\_RLum.Data.Spectrum & Plot function for an RLum.Data.Spectrum S4 class object & $<$br /$>$ The function provides a standardised plot output for spectrum data of an$<$br /$>$ RLum.Data.Spectrum S4 class object$<$br /$>$ & 0.4.0 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  63 & plot\_RLum & General plot function for RLum S4 class objects & $<$br /$>$ Function calls object specific plot functions for RLum S4 class objects.$<$br /$>$ & 0.4.1 & 2015-08-30 & 15:14:19
+  63 & plot\_RLum & General plot function for RLum S4 class objects & $<$br /$>$ Function calls object specific plot functions for RLum S4 class objects.$<$br /$>$ & 0.4.1 & 2015-08-31 & 09:06:41
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  64 & plot\_RLum.Results & Plot function for an RLum.Results S4 class object & $<$br /$>$ The function provides a standardised plot output for data of an RLum.Results$<$br /$>$ S4 class object$<$br /$>$ & 0.2.0 & 2015-08-30 & 16:13:50
+  64 & plot\_RLum.Results & Plot function for an RLum.Results S4 class object & $<$br /$>$ The function provides a standardised plot output for data of an RLum.Results$<$br /$>$ S4 class object$<$br /$>$ & 0.2.0 & 2015-08-31 & 09:06:41
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,$<$br /$>$ Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   65 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.9.1 & 2015-08-21 & 14:53:14
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
