@@ -134,7 +134,7 @@ This function must not be mixed up with the function
 \bold{The function currently does only support 'OSL' or 'IRSL' data!}
 }
 \section{Function version}{
- 0.6.3 (2015-08-31 01:43:16)
+ 0.6.3 (2015-08-31 09:06:41)
 }
 \examples{
 ##load data
