@@ -36,7 +36,7 @@ automatically removed from the input \code{list}.
 So far not for every \code{RLum} object a merging function exists.
 }
 \section{Function version}{
- 0.1.2 (2015-08-30 19:11:03)
+ 0.1.2 (2015-08-31 23:16:21)
 }
 \examples{
 ##Example based using data and from the calc_CentralDose() function
