@@ -33,7 +33,7 @@ Not all arguments available for \code{\link{plot}} will be passed!
 Only plotting of \code{RLum.Results} objects are supported.
 }
 \section{Function version}{
- 0.2.0 (2015-08-30 16:13:50)
+ 0.2.0 (2015-08-31 09:06:41)
 }
 \examples{
 ###load data
